--- a/Api_fasodocs/src/main/resources/application.properties
+++ b/Api_fasodocs/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 server.servlet.context-path=/api
 
 # Configuration de la base de données MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/fasodocs_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/FasoDocs?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
