--- a/Api_fasodocs/src/main/resources/application.properties
+++ b/Api_fasodocs/src/main/resources/application.properties
@@ -25,17 +25,18 @@ jwt.refresh-expiration=604800000
 # Configuration Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=votre-email@gmail.com
-spring.mail.password=votre-mot-de-passe-application
+spring.mail.username=dabadiallo694@gmail.com
+spring.mail.password=retw rklx oabi xnpd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Configuration Twilio pour l'envoi de SMS
+
 
 # Configuration des fichiers uploadés
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Configuration Firebase (pour les notifications push)
-firebase.config.path=classpath:firebase-service-account.json
 
 # Configuration de la langue par défaut
 app.default-language=fr
