--- a/Api_fasodocs/.gitignore
+++ b/Api_fasodocs/.gitignore
@@ -3,6 +3,7 @@
 
 # Log file
 *.log
+SOLUTION_TWILIO_TRIAL.mdSOLUTION_TWILIO_TRIAL.md
 
 # BlueJ files
 *.ctxt
@@ -59,7 +60,7 @@ nbdist/
 .vscode/
 
 # Application specific
-application-local.properties
+application.properties
 application-dev.properties
 application-prod.properties
 firebase-service-account.json
