Mise à joure en fonction de l'intégration

--- a/Api_fasodocs/src/main/resources/application-chatbot.properties
+++ b/Api_fasodocs/src/main/resources/application-chatbot.properties
@@ -8,6 +8,7 @@ server.port=8080
 # Configuration Djelia AI Backend (Python Flask)
 # IMPORTANT: Le backend Python doit tourner sur ce port
 djelia.backend.url=http://localhost:5000
+djelia.api.key=VOTRE_CLE_API_DJELIA_ICI
 
 # Timeouts pour les appels au backend Djelia
 # Augmentez ces valeurs si les réponses audio sont longues
